--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ footer{
 }
 
 body{
-  background-image: url(image/stadium.jpg);
+  background-image: url('./images/stadium.jpg');
   width: 100%;
   background-size: cover;
 }
@@ -54,4 +54,3 @@ body{
 .texte{
   margin-left: 32rem;
 }
-s
